LWCLearnwithFLOWOrg/force-app/main/default/objects/Lead_Source_Mapping__mdt/Lead_Source_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used by LEADSOURCE classes to assign appropriate Lead Source and Lead Source Detail values.</description>
    <label>Lead Source Mapping</label>
    <pluralLabel>Lead Source Mappings</pluralLabel>
</CustomObject>