LWCLearnwithFLOWOrg/force-app/main/default/objects/Lead_Source_Mapping__mdt/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <description>2020-05-06 - N. Ehrmann - If a Lead Source is matched, then this will be the new Lead Source Detail.</description>
    <label>Lead Source Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>