LWCLearnwithFLOWOrg/force-app/main/default/objects/Lead_Source_Mapping__mdt/fields/New_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Source__c</fullName>
    <description>2020-05-06 - N. Ehrmann - If a Lead Source is matched, then this will become the new Lead Source value.</description>
    <label>New Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>