LWCLearnwithFLOWOrg/force-app/main/default/objects/Lead_Source_Mapping__mdt/fields/Original_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Source__c</fullName>
    <description>2020-05-06 - N. Ehrmann - This is used by LEADSOURCE classes to check if the Lead Source on creation is a special value. If so, then a new Lead Source will be assigned.</description>
    <label>Original Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>