LWCLearnwithFLOWOrg/force-app/main/default/objects/Lead_Source_Mapping__mdt/listViews/All_Lead_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Lead_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Original_Lead_Source__c</columns>
    <columns>New_Lead_Source__c</columns>
    <columns>Lead_Source_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Lead Mappings</label>
</ListView>